[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "budget"
authors = [{ name = "Joshua Cook", email = "joshuacook0023@gmail.com" }]
readme = "README.md"
license = { file = "LICENSE" }
classifiers = [
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
]
dynamic = ["version", "description"]
dependencies = [
    "polars",
    "pandas",
    "matplotlib",
    "seaborn",
    "typer[all]",
    "black",
    "pre-commit",
    "pyarrow",
]

[project.urls]
Home = "https://github.com/jhrcook/budget"

[project.scripts]
budget = "budget.cli:app"
